<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HazardHawk</string>
    <string name="camera_permission_required">Camera permission is required to capture safety photos</string>
    <string name="location_permission_required">Location permission is required to tag photos with GPS coordinates</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="tag_photo">Tag Photo</string>
    <string name="compliance_status">Compliance Status</string>
    <string name="safety_tags">Safety Tags</string>
    <string name="compliant">Compliant</string>
    <string name="needs_improvement">Needs Improvement</string>
    <string name="save_photo">Save Photo</string>
    <string name="cancel">Cancel</string>
</resources>